# Newton-GPT

./: .env.template  .gitignore  Cargo.toml  Makefile  README.md
src/: lib.rs  main.rs
src/commands/: create_chat.rs  info.rs  mod.rs  model.rs  ping.rs
src/ui/: mod.rs
src/ui/layout/: banner.rs  confirm_popup.rs  mod.rs
src/utils/: datastorage.rs  env_load.rs  gpt.rs  image.rs  log.rs  mod.rs
