[package]
name = "discord_gpt_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "2.6.1"
chatgpt_rs = "1.1.11"
chrono = "0.4.26"
crossterm = "0.26.1"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.19"
openssl = "0.10.55"
rand = "0.8.5"
reqwest = "0.11.18"
rust-crypto = "0.2.36"
serde = "1.0.171"
serde_json = "1.0.103"
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.29.1", features = ["full"] }
tui = "0.19.0"
unicode-width = "0.1.10"
url = "2.4.0"
